--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bootstrap": "^3.3.7",
     "jquery": "^3.2.1",
     "vue": "^2.5.2",
+    "vue-resource": "^1.3.4",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
